Fix spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -45,11 +45,11 @@ a:hover, a:active, a:focus {
 }
 
 .subheader {
-  font-size: 2.5rem;
   padding: 2.8rem 0;
   h4 {
+    font-size: 2.5rem;
     font-weight: 300;
-    word-spacing: 0.4rem;
+    word-spacing: 0.8rem;
     text-transform: uppercase;
   }
 }
@@ -108,7 +108,7 @@ a:hover, a:active, a:focus {
   }
 
   section {
-    width: 50rem;
+    width: 51rem;
     margin: 0 auto;
   }
 
@@ -125,15 +125,26 @@ a:hover, a:active, a:focus {
   }
 
   .subheader h4 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     word-spacing: 1.4rem;
+    display: flex;
+    justify-content: space-between;
   }
 
-  .artists .artist-link {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    border-bottom: 0.5px solid $color2;
+  .artists {
+    .artist-link {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: baseline;
+      border-bottom: 0.5px solid $color2;
+      padding-bottom: 0.2rem;
+    }
+    .artist-list {
+      li {
+        margin-bottom: 1.8rem;
+      }
+    }
   }
+
 }
